bridge/base/feedback-api-deployment.yaml
#! feedback-api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: feedback-api
    namespace: llm-powered-language-feedback-api
    labels:
        com.docker.compose.project: llm-powered-language-feedback-api
        com.docker.compose.service: feedback-api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: llm-powered-language-feedback-api
            com.docker.compose.service: feedback-api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: llm-powered-language-feedback-api
                com.docker.compose.service: feedback-api
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: feedback-api
                  image: llm-powered-language-feedback-api-feedback-api
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: feedback-a-8000
                      containerPort: 8000
